--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,58 +3,58 @@ services:
 
 #==== INSTANCE MARIADB SPECIFIQUE A RANCHER-SERVER ====
   rancher-mariadb:
-    image: 'mariadb'
+    image: mariadb
     restart: always
-    container_name: 'rancher-mariadb'
-    hostname: 'rancher-mariadb'
+    container_name: rancher-mariadb
+    hostname: rancher-mariadb
     expose:
       - '3306'
     volumes:
-      - 'rancher-mariadb:/var/lib/mysql'
+      - rancher-mariadb:/var/lib/mysql
     environment:
-      - MYSQL_ROOT_PASSWORD = 'iop'
-      - MYSQL_DATABASE = 'ranche_db'
+      - MYSQL_ROOT_PASSWORD = iop
+      - MYSQL_DATABASE = ranche_db
 
 #==== INTERFACE GRAPHIQUE POUR MARIADB ====
   rancher-phpmyadmin:
-    image: 'phpmyadmin/phpmyadmin'
+    image: phpmyadmin/phpmyadmin
     restart: always
-    container_name: 'rancher-phpmyadmin'
-    hostname: 'rancher-phpmyadmin'
+    container_name: rancher-phpmyadmin
+    hostname: rancher-phpmyadmin
     ports:
       - '8000:80'
     volumes:
-      - 'rancher-phpmyadmin:/sessions'
+      - rancher-phpmyadmin:/sessions
     depends_on:
-      - 'rancher-mariadb'
+      - rancher-mariadb
     links:
-      - 'rancher-mariadb:db'
+      - rancher-mariadb:db
 
 #==== RANCHER SERVER EN VERSION ENTREPRISE - UTILISE LA BASE RANCHER-MARIADB ===
 #==== Volumes MYSQL uniquement pour éviter la création de volumes par docker car BDD externalisée ===
 #==== Volumes cattle pour les données specifiques à rancher ≡
   rancher-server:
-    image: 'rancher/server'
+    image: rancher/server
     restart: always
-    container_name: 'rancher-server'
-    hostname: 'rancher-server'
+    container_name: rancher-server
+    hostname: rancher-server
     ports:
       - '8080:8080'
     volumes:
-      - 'rancher-cattle:/var/lib/cattle'
-      - 'rancher-mysql:/var/lib/mysql'
-      - 'rancher-mysql-log:/var/log/mysql'
-#      - './ca.crt:/ca.crt'
+      - rancher-cattle:/var/lib/cattle
+      - rancher-mysql:/var/lib/mysql
+      - rancher-mysql-log:/var/log/mysql
+#      - ./ca.crt:/ca.crt
     depends_on:
-      - 'rancher-mariadb'
+      - rancher-mariadb
     links:
-      - 'rancher-mariadb'
+      - rancher-mariadb
     environment:
-      - CATTLE_DB_CATTLE_MYSQL_HOST = 'rancher-mariadb'
+      - CATTLE_DB_CATTLE_MYSQL_HOST = rancher-mariadb
       - CATTLE_DB_CATTLE_MYSQL_PORT = '3306'
-      - CATTLE_DB_CATTLE_MYSQL_NAME = 'rancher_db'
-      - CATTLE_DB_CATTLE_USERNAME   = 'root'
-      - CATTLE_DB_CATTLE_PASSWORD   = 'iop'
+      - CATTLE_DB_CATTLE_MYSQL_NAME = rancher_db
+      - CATTLE_DB_CATTLE_USERNAME   = root
+      - CATTLE_DB_CATTLE_PASSWORD   = iop
 
 #=== DETAIL DES VOLUMES ===
 volumes:
