--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,13 @@ version: "2"
 services:
 
 #==== INSTANCE MARIADB SPECIFIQUE A RANCHER-SERVER ====
-  rancher-mariadb:
+  mariadb:
     image: mariadb
     restart: always
-    container_name: rancher-mariadb
-    hostname: rancher-mariadb
     expose:
       - "3306"
     volumes:
-      - rancher-mariadb:/var/lib/mysql
+      - mariadb:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=iop
       - MYSQL_USER=cattle
@@ -18,50 +16,51 @@ services:
       - MYSQL_DATABASE=rancherdb
 
 #==== INTERFACE GRAPHIQUE POUR MARIADB ====
-  rancher-phpmyadmin:
+  phpmyadmin:
     image: phpmyadmin/phpmyadmin
     restart: always
-    container_name: rancher-phpmyadmin
-    hostname: rancher-phpmyadmin
     ports:
       - "8000:80"
     volumes:
-      - rancher-phpmyadmin:/sessions
+      - phpmyadmin:/sessions
     depends_on:
-      - rancher-mariadb
-    links:
-      - rancher-mariadb:db
+      - mariadb:db
 
 #==== RANCHER SERVER EN VERSION ENTREPRISE - UTILISE LA BASE RANCHER-MARIADB ===
 #==== Volumes MYSQL uniquement pour éviter la création de volumes par docker car BDD externalisée ===
 #==== Volumes cattle pour les données specifiques à rancher ≡
-  rancher-server:
-    image: rancher/server
+  rancher:
+    image: rancher/server:v1.1.4
     restart: always
-    container_name: rancher-server
-    hostname: rancher-server
-    ports:
-      - "8080:8080"
+    expose:
+      - "8080"
     volumes:
-      - rancher-cattle:/var/lib/cattle
-      - rancher-mysql:/var/lib/mysql
-      - rancher-mysql-log:/var/log/mysql
-#      - ./ca.crt:/ca.crt
+      - cattle:/var/lib/cattle
+      - mysql:/var/lib/mysql
+      - mysql-log:/var/log/mysql
+      - ./ca.cert.pem:/ca.crt:ro
     depends_on:
-      - rancher-mariadb
-    links:
-      - rancher-mariadb
+      - mariadb
     environment:
-      - CATTLE_DB_CATTLE_MYSQL_HOST=rancher-mariadb
+      - CATTLE_DB_CATTLE_MYSQL_HOST=mariadb
       - CATTLE_DB_CATTLE_MYSQL_PORT=3306
       - CATTLE_DB_CATTLE_MYSQL_NAME=rancherdb
       - CATTLE_DB_CATTLE_USERNAME=cattle
       - CATTLE_DB_CATTLE_PASSWORD=cattle
 
+  proxy:
+    build: ./rancher-proxy
+    restart: always
+    ports:
+      - "443:443"
+      - "80:80"
+    depends_on:
+      - rancher
+
 #=== DETAIL DES VOLUMES ===
 volumes:
-  rancher-mariadb:
-  rancher-phpmyadmin:
-  rancher-cattle:
-  rancher-mysql:
-  rancher-mysql-log:
+  mariadb:
+  phpmyadmin:
+  cattle:
+  mysql:
+  mysql-log:
