--- a/rancher-proxy/conf/extra/httpd-vhosts.conf
+++ b/rancher-proxy/conf/extra/httpd-vhosts.conf
@@ -9,8 +9,8 @@
   ServerAlias rancher
 
   SSLEngine on
-  SSLCertificateFile conf/rancher.crt"
-  SSLCertificateKeyFile conf/rancher.key"
+  SSLCertificateFile conf/rancher.crt
+  SSLCertificateKeyFile conf/rancher.key
 
   ProxyRequests Off
   ProxyPreserveHost On
